# substrate-subxt

./: Cargo.toml  metadata.json
examples/: submit_and_watch.rs
src/: events.rs  lib.rs  metadata.rs  rpc.rs  runtimes.rs
src/frame/: asset_registry.rs  identity.rs  mod.rs  primitives.rs  system.rs
src/frame/primitives/: asset.rs  attestation.rs  claim.rs  did_property.rs  fact.rs
