[package]
name = "substrate-subxt"
version = "0.4.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
description = "Submit extrinsics (transactions) to a substrate node via RPC"
keywords = ["parity", "substrate", "blockchain"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
log = "0.4"
thiserror = "1.0"
futures = "0.3"
jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee/", features = ["ws"] ,rev = "a0bea41c4f37125fa742ec48b12e11cf55c592b5"}
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "1.7"
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive", "full"] }

frame-metadata ={ git = "https://github.com/paritytech/substrate.git", rev = '9e073ad23c0df3e59cb72313ecb866485994c233'}
frame-support = { git = "https://github.com/paritytech/substrate.git", rev = '9e073ad23c0df3e59cb72313ecb866485994c233'}
sp-runtime  = { git = "https://github.com/paritytech/substrate.git", rev = '9e073ad23c0df3e59cb72313ecb866485994c233'}
sp-version = { git = "https://github.com/paritytech/substrate.git", rev = '9e073ad23c0df3e59cb72313ecb866485994c233'}
indices = { package = "pallet-indices",git = "https://github.com/paritytech/substrate.git", rev = '9e073ad23c0df3e59cb72313ecb866485994c233'}
hex = "0.4.0"
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", rev = '9e073ad23c0df3e59cb72313ecb866485994c233'}
sp-rpc =   { git = "https://github.com/paritytech/substrate.git", rev = '9e073ad23c0df3e59cb72313ecb866485994c233'}

sp-core = { git = "https://github.com/paritytech/substrate.git", rev = '9e073ad23c0df3e59cb72313ecb866485994c233'}
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", rev = '9e073ad23c0df3e59cb72313ecb866485994c233'}

[dev-dependencies]
async-std = "1.2.0"
env_logger = "0.7"
wabt = "0.9"
frame-system = { git = "https://github.com/paritytech/substrate.git", rev = '9e073ad23c0df3e59cb72313ecb866485994c233'}
pallet-balances  = { git = "https://github.com/paritytech/substrate.git", rev = '9e073ad23c0df3e59cb72313ecb866485994c233'}
sp-keyring  = { git = "https://github.com/paritytech/substrate.git", rev = '9e073ad23c0df3e59cb72313ecb866485994c233'}
