[package]
name = "substrate-subxt"
version = "0.4.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
description = "Submit extrinsics (transactions) to a substrate node via RPC"
keywords = ["parity", "substrate", "blockchain"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
log = "0.4"
thiserror = "1.0"
futures = "0.3"
jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee/", features = ["ws"] ,rev = "62da58d12321355aac76975bfedfbc3ab0fe08e3"}
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "1.7"
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive", "full"] }

frame-metadata = "11.0.0-alpha.5"
frame-support = "2.0.0-alpha.5"
sp-runtime  = "2.0.0-alpha.5"
sp-version = "2.0.0-alpha.5"
indices = { package = "pallet-indices", version = "2.0.0-alpha.5" }
hex = "0.4.0"
sc-rpc-api = "0.8.0-alpha.5"
sp-rpc =   "2.0.0-alpha.5"

sp-core = "2.0.0-alpha.5"
sp-transaction-pool = "2.0.0-alpha.5"

[dev-dependencies]
async-std = "1.2.0"
env_logger = "0.7"
wabt = "0.9"
frame-system = "2.0.0-alpha.5"
# node-runtime = "2.0.0-alpha.5"
pallet-balances  = "2.0.0-alpha.5"
sp-keyring  = "2.0.0-alpha.5"
